2009-11-20  Janus Weil  <janus@gcc.gnu.org>

	* intrinsic.texi (C_F_PROCPOINTER): Remove obsolete comment.

2009-11-20  Paul Thomas  <pault@gcc.gnu.org>
	    Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42104
	* trans-expr.c (gfc_conv_procedure_call): If procedure pointer
	component call, use the component's 'always_explicit' attr
	for array arguments.

2009-11-19  Janus Weil  <janus@gcc.gnu.org>

	* trans-expr.c (conv_isocbinding_procedure): New function.
	(gfc_conv_procedure_call): Move ISO_C_BINDING stuff to
	separate function.

2009-11-19  Tobias Burnus  <burnus@net-b.de>

	* gfortran.texi (Interoperable Subroutines and Functions): Fix
	example.

2009-11-18  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42072
	* trans-expr.c (gfc_conv_procedure_call): Handle procedure pointer
	dummies which are passed to C_F_PROCPOINTER.

2009-11-18  Alexandre Oliva  <aoliva@redhat.com>

	* module.c (mio_f2k_derived): Initialize op.

2009-11-15  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42048
	* match.c (gfc_match_call): If we're inside a function with derived
	type return value, allow calling a TBP of the result variable.

2009-11-12  Tobias Burnus  <burnus@net-b.de>

	* intrinsic.texi (XOR): Refer also to .NEQV.
	(ISO_FORTRAN_ENV): State which parameters are F2008.

2009-11-11  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41978
	* resolve.c (resolve_ref): Take care of procedure pointer component
	references.

2009-11-06  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/41909
	* resolve.c (is_illegal_recursion): Return false if sym is program.

2009-11-06  Steven G. Kargl  <kargl@gcc.gnu.org>

	* resolve.c (check_typebound_override): Remove duplicate "in" in error
	message.

2009-11-05  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/41918
	* fortran/trans-decl.c: Silence intent(out) warning for derived type
	dummy arguments with default initialization.

2009-11-05  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41556